<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Travel Cost App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="appName">Travel Cost Calculation</string>
    <string name="distanceString">Distance (miles)</string>
    <string name="distanceHint">Enter Distance</string>
    <string name="mPGString">MPG:</string>
    <string name="ten">10</string>
    <string name="fifty">50</string>
    <string name="gasPriceString">Gas Price:</string>
    <string name="oneDollarString">$1.00</string>
    <string name="fourDollarString">$4.00</string>
    <string name="costString">Cost</string>
    <string name="buggati">Buggati Image</string>
    <string name="bugatti">Bugatti Image</string>

</resources>
