<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:rowCount="8"
    android:useDefaultMargins="true"
    tools:context="com.muath.travelcostapp.MainActivity" >

    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:gravity="center_horizontal"
        android:text="@string/appName"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:src="@android:drawable/btn_star" />

    <TextView
        android:id="@+id/distanceTextView"
        android:layout_gravity="end|center_vertical"
        android:text="@string/distanceString"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/distanceDisplayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2"
        android:background="@android:color/holo_blue_light"
        android:padding="@dimen/padding"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="visible" />

    <EditText
        android:id="@+id/distanceEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/mPGTextView"
        android:layout_gravity="center_horizontal|end"
        android:text="@string/mPGString"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/mPGSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:max="40"
        android:progress="15" />

    <LinearLayout
        android:id="@+id/mPGNumberLinearLayout"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tenTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ten"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/fiftyTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/fifty"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <TextView
        android:id="@+id/gasPriceTextView"
        android:layout_gravity="end"
        android:text="@string/gasPriceString"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/gasPriceSeekBar"
        android:layout_width="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:max="300"
        android:progress="150" />

    <LinearLayout
        android:id="@+id/gasPricesLinearLayout"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/oneDollarTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/oneDollarString"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/fourDollarTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/fourDollarString"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <TextView
        android:id="@+id/costTextView"
        android:layout_gravity="end"
        android:text="@string/costString"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/coastDisplayTextView"
        android:layout_gravity="start|fill_horizontal"
        android:background="@android:color/holo_orange_dark"
        android:padding="@dimen/padding"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</GridLayout>
